# libnixcore

./: LICENSE.txt  Pipfile  README.md  pyproject.toml  setup.py
.circleci/: config.yml
docs/: conf.py  index.rst  libcore.job.rst  libcore.rst  libcore.v4l2.rst  libcore.vc4.rst  modules.rst
libcore/: README.md  __init__.py  capture.py  maintainer.py  setup.py  updateserver.py
libcore/job/: __init__.py  consumer.py  isolated.py  job.py  producer.py  tube.py
libcore/v4l2/: control.py  types.py  video.py
libcore/vc4/: __init__.py  display.py
